--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,8 +15,8 @@
           <a href="/" class="brand-logo left">5 4 3 2 1 be </a>
           <ul class="right">
           {{#if currentUser}}
-            <li><a href="/question/new">+be aware</a></li>
-            <li><a href="/question/new">+be grateful</a></li>
+            <li><a href="/awareness/new">+be aware</a></li>
+            {{!-- <li><a href="/question/new">+be grateful</a></li> --}}
             <li><a href="/user/{{currentUser.id}}">Profile</a></li>
             <li><a href="/user/logout">Log Out</a></li>
           {{else}}
