--- a/views/awareness/show.hbs
+++ b/views/awareness/show.hbs
@@ -2,8 +2,8 @@
   {{> 'question'}}
 </p>
 
-{{#if answers.length}}
-  {{#each answers}}
+{{#if comments.length}}
+  {{#each comments}}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
@@ -13,7 +13,7 @@
       <div class="card-action">
         <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
         <span class="question__date">{{ createdAt }}</span>
-        <span class="question_answers">{{ answers.length }} Answers</span>
+        <span class="question_comments">{{ comments.length }} Comments</span>
       </div>
     </div>
   {{/each}}
