--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -1,9 +1,9 @@
 <section class="profile">
   <h2>{{user.email}}</h2>
-  {{#if user.questions}}
-    <div class="questions">
-      {{#each user.questions}}
-         {{> 'question'}}
+  {{#if user.awarenessPosts}}
+    <div class="awareness">
+      {{#each user.awarenessPosts}}
+         {{> 'awarness'}}
       {{/each}}
     </div>
   {{else}}
