installed lodash and parser, continue to debug posts view and db issues

--- a/views/app/index.hbs
+++ b/views/app/index.hbs
@@ -1,6 +1,6 @@
-{{#if awareness}}
-  <ul class="awareness">
-    {{#each awareness}}
+{{#if awarenessPosts}}
+  <ul class="awarenessPosts">
+    {{#each awarenessPosts}}
       <div class="card">
         <div class="card-content">
           <a class="card-title" href="/awareness/{{id}}">
