--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>StackStyle</title>
+    <title>BE</title>
     <link rel="stylesheet" 
     {{!-- https://cdnjs.com/libraries/twitter-bootstrap --}}
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> 
@@ -14,7 +14,7 @@
     <header class="site-header">
       <nav>
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo left">5 4 3 2 1 be </a>
+          <a href="/" class="brand-logo left">BE </a>
           <ul class="right">
           {{#if currentUser}}
             <li><a href="/awareness/new">+be aware</a></li>
