--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -3,7 +3,7 @@
   {{#if user.awarenessPosts}}
     <div class="awareness">
       {{#each user.awarenessPosts}}
-         {{> 'awarness'}}
+         {{> 'awareness'}}
       {{/each}}
     </div>
   {{else}}
