--- a/views/partials/awareness.hbs
+++ b/views/partials/awareness.hbs
@@ -7,7 +7,7 @@
   <div class="card-action">
     <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
     <span class="question__date">{{ createdAt }}</span>
-    <span class="question_answers">{{ answers.length }} Answers</span>
+    <span class="question_comments">{{ comments.length }} Answers</span>
     <form class="" action="/question/{{id}}?_method=DELETE" method="POST">
       <button type="submit" name="button">Delete</button>
     </form>
