--- a/views/awareness/show.hbs
+++ b/views/awareness/show.hbs
@@ -21,7 +21,7 @@
 
 <div class="card">
   <div class="card-content">
-    <h4 class="card-title">Add an answer:</h6>
+    <h4 class="card-title">Add a comment:</h6>
     <form method="POST" action="/awareness/{{id}}?_method=PUT" class="row">
       <p class="input-field inline col s10">
         <label for="content"></label>
