--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -1,7 +1,7 @@
 <section class="profile">
   <h2>{{user.email}}</h2>
   {{#if user.awarenessPosts}}
-    <div class="awareness">
+    <div class="awarenessPosts">
       {{#each user.awarenessPosts}}
          {{> 'awareness'}}
       {{/each}}
