--- a/views/question/new.hbs
+++ b/views/question/new.hbs
@@ -1,8 +1,8 @@
 <section class="form-container">
-  <h4>Be Aware</h4>
-  <form action="/awareness" method="post" class="awareness-form">
+  <h4>New Question</h4>
+  <form action="/question" method="post" class="question-form">
     <div class="input-field">
-      <textarea name="awareness[content]" cols="30" rows="10" placeholder="Message"></textarea>
+      <textarea name="question[content]" cols="30" rows="10" placeholder="Message"></textarea>
     </div>
     <div class="">
       <select name="author" id="author">
@@ -13,7 +13,7 @@
       </select>
     </div>
     <div class="input-field">
-      <input type="submit" value="Awareness" class="btn">
+      <input type="submit" value="Question" class="btn">
     </div>
   </form>
 </section>
