--- a/views/partials/question.hbs
+++ b/views/partials/question.hbs
@@ -1,14 +1,14 @@
 <div class="card">
   <div class="card-content">
-    <a class="card-title" href="/awareness{{id}}">
+    <a class="card-title" href="/question/{{id}}">
       {{ content }}
     </a>
   </div>
   <div class="card-action">
     <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
-    <span class="awareness__date">{{ createdAt }}</span>
-    <span class="awareness_comments">{{ comments.length }} Answers</span>
-    <form class="" action="/awareness/{{id}}?_method=DELETE" method="POST">
+    <span class="question__date">{{ createdAt }}</span>
+    <span class="question_answers">{{ answers.length }} Answers</span>
+    <form class="" action="/question/{{id}}?_method=DELETE" method="POST">
       <button type="submit" name="button">Delete</button>
     </form>
   </div>
