--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -1,12 +1,12 @@
 <section class="profile">
   <h2>{{user.email}}</h2>
-  {{#if user.awarenessPosts}}
-    <div class="awarenessPosts">
-      {{#each user.awarenessPosts}}
-         {{> 'awareness'}}
+  {{#if user.questions}}
+    <div class="questions">
+      {{#each user.questions}}
+         {{> 'question'}}
       {{/each}}
     </div>
   {{else}}
-    <p>No posts yet</p>
+    <p>No questions yet</p>
   {{/if}}
 </section>
