--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>StackStyle</title>
+    <title>BE</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
@@ -12,10 +12,10 @@
     <header class="site-header">
       <nav>
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo left">Stackstyle</a>
+          <a href="/" class="brand-logo left">BE</a>
           <ul class="right">
           {{#if currentUser}}
-            <li><a href="/question/new">+question</a></li>
+            <li><a href="/question/new">+be aware</a></li>
             <li><a href="/user/{{currentUser.id}}">Profile</a></li>
             <li><a href="/user/logout">Log Out</a></li>
           {{else}}
