--- a/views/question/new.hbs
+++ b/views/question/new.hbs
@@ -1,5 +1,5 @@
 <section class="form-container">
-  <h4>New Question</h4>
+  <h4>New Post</h4>
   <form action="/question" method="post" class="question-form">
     <div class="input-field">
       <textarea name="question[content]" cols="30" rows="10" placeholder="Message"></textarea>
