--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -14,7 +14,7 @@
       <input type="password" name="password" placeholder="Password">
     </p>
     <p class="input-field">
-      <input type="submit" value="Log In" class="btn waves-effect waves-light">
+      <input type="submit" value="Log In" class="btn-floating btn-large waves-effect waves-light blue">
     </p>
   </form>
 </section>
