--- a/views/app/index.hbs
+++ b/views/app/index.hbs
@@ -10,7 +10,7 @@
         <div class="card-action">
           <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
           <span class="question__date">{{ createdAt }}</span>
-          <span class="question_answers">{{ answers.length }} Answers</span>
+          <span class="question_answers">{{ answers.length }} Comments</span>
         </div>
       </div>
     {{/each}}
