--- a/views/question/new.hbs
+++ b/views/question/new.hbs
@@ -1,8 +1,9 @@
 <section class="form-container">
-  <h4>New Post</h4>
+  <h4>breathe</h4>
   <form action="/question" method="post" class="question-form">
     <div class="input-field">
-      <textarea name="question[content]" cols="30" rows="10" placeholder="Message"></textarea>
+      <textarea name= "question[content]" cols="30" rows="10"   
+      placeholder="5 things you can see"></textarea>
     </div>
     <div class="">
       <select name="author" id="author">
@@ -13,7 +14,7 @@
       </select>
     </div>
     <div class="input-field">
-      <input type="submit" value="Question" class="btn">
+      <input type="submit" value="+" class="btn">
     </div>
   </form>
 </section>
