edited views content

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,10 +19,10 @@
     <header class="site-header">
       <nav>
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo left">BE</a>
+          <a href="/" class="brand-logo left">together let's breathe</a>
           <ul class="right">
           {{#if currentUser}}
-            <li><a href="/question/new">+be aware</a></li>
+            <li><a href="/question/new">+intention</a></li>
             <li><a href="/user/{{currentUser.id}}">profile</a></li>
             <li><a href="/user/logout">log out</a></li>
           {{else}}
