--- a/views/question/new.hbs
+++ b/views/question/new.hbs
@@ -3,7 +3,8 @@
   <form action="/question" method="post" class="question-form">
     <div class="input-field">
       <textarea name= "question[content]" cols="30" rows="10"   
-      placeholder="5 things you can see"></textarea>
+      placeholder="take a deep breath... 
+set your intention."></textarea>
     </div>
     <div class="">
       <select name="author" id="author">
