changed question model to intention

--- a/views/intention/new.hbs
+++ b/views/intention/new.hbs
@@ -1,8 +1,8 @@
 <section class="form-container">
   <h4>breathe</h4>
-  <form action="/question" method="post" class="question-form">
+  <form action="/intention" method="post" class="intention-form">
     <div class="input-field">
-      <textarea name= "question[content]" cols="30" rows="10"   
+      <textarea name= "intention[content]" cols="30" rows="10"   
       placeholder="take a deep breath... 
 set your intention."></textarea>
     </div>
