--- a/views/app/index.hbs
+++ b/views/app/index.hbs
@@ -1,16 +1,16 @@
-{{#if questions}}
-  <ul class="questions">
-    {{#each questions}}
+{{#if intentions}}
+  <ul class="intentions">
+    {{#each intentions}}
       <div class="card">
         <div class="card-content">
-          <a class="card-title" href="/question/{{id}}">
+          <a class="card-title" href="/intention/{{id}}">
             {{ content }}
           </a>
         </div>
         <div class="card-action">
           <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
-          <span class="question__date">{{ createdAt }}</span>
-          <span class="question_answers">{{ answers.length }} Comments</span>
+          <span class="intention__date">{{ createdAt }}</span>
+          <span class="intention_answers">{{ answers.length }} Comments</span>
         </div>
       </div>
     {{/each}}
