--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,7 @@
           <a href="/" class="brand-logo left">together let's breathe</a>
           <ul class="right">
           {{#if currentUser}}
-            <li><a href="/question/new">+intention</a></li>
+            <li><a href="/intention/new">+intention</a></li>
             <li><a href="/user/{{currentUser.id}}">profile</a></li>
             <li><a href="/user/logout">log out</a></li>
           {{else}}
