attempt username integration

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
     <header class="site-header">
       <nav>
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo left">together let's breathe</a>
+          <a href="/" class="brand-logo left">BREATHER</a>
           <ul class="right">
           {{#if currentUser}}
             <li><a href="/intention/new">+intention</a></li>
