--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -11,6 +11,9 @@
       <input type="email" name="email" placeholder="Email">
     </p>
     <p class="input-field">
+      <input type="username" name="username" placeholder="Username">
+    </p>
+    <p class="input-field">
       <input type="password" name="password" placeholder="Password">
     </p>
     <p class="input-field">
