--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -9,11 +9,17 @@
     <p class="input-field">
       <input type="email" name="email" placeholder="Email">
     </p>
+     <p class="input-field">
+      <input type="text" name="username" placeholder="Username">
+    </p>
     <p class="input-field">
       <input type="password" name="password" placeholder="Password">
     </p>
+     <p class="input-field">
+      <input type="text" name="mantra" placeholder="Motto/Mantra">
+    </p>
     <p class="input-field">
-      <input type="submit" value="Sign Up" class="btn waves-effect waves-light">
+      <input type="submit" value="Sign Up" class="btn-floating btn-large waves-effect waves-light blue">
     </p>
   </form>
 </section>
