add like button to index.hbs

--- a/views/app/index.hbs
+++ b/views/app/index.hbs
@@ -11,6 +11,7 @@
           <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
           <span class="intention__date">{{ createdAt }}</span>
           <span class="intention_answers">{{ answers.length }} Comments</span>
+          <span class = "intention_likes">{{likes.length}} Likes </span>
         </div>
       </div>
     {{/each}}
