--- a/views/intention/show.hbs
+++ b/views/intention/show.hbs
@@ -14,6 +14,7 @@
         <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
         <span class="intention__date">{{ createdAt }}</span>
         <span class="intention_answers">{{ answers.length }} Answers</span>
+        <span class = "intention_likes"> {{likes.length }} Likes</span>
       </div>
     </div>
   {{/each}}
@@ -21,6 +22,7 @@
 
 <div class="card">
   <div class="card-content">
+    <button> Like </button>
     <h4 class="card-title">Add a note for your teammate:</h6>
     <form method="POST" action="/intention/{{id}}?_method=PUT" class="row">
       <p class="input-field inline col s10">
