temporarily remove reflection model

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,4 +6,12 @@
   
   select {
     display: block;
-  }
+  } 
+  /* .wrapper {
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
+    background: blue; 
+  } */ 
+
+  
