--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,7 @@
           <ul class="right">
           {{#if currentUser}}
             <li><a href="/intention/new">+intention</a></li>
+            {{!-- <li><a href = "/reflection/show "> +reflection </a></li> --}}
             <li><a href="/user/{{currentUser.id}}">profile</a></li>
             <li><a href="/user/logout">log out</a></li>
           {{else}}
