--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -11,7 +11,7 @@
       <input type="email" name="email" placeholder="Email">
     </p>
     <p class="input-field">
-      <input type="username" name="username" placeholder="Username">
+      <input type="text" name="username" placeholder="Username">
     </p>
     <p class="input-field">
       <input type="password" name="password" placeholder="Password">
