--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,5 +1,5 @@
 <section class="row">
-  <h4>Sign Up:</h4>
+  {{!-- <h4>sign up:</h4> --}}
 
   {{#if message}}
     <p class="alert">{{message}}</p>
@@ -9,17 +9,17 @@
     <p class="input-field">
       <input type="email" name="email" placeholder="Email">
     </p>
-     <p class="input-field">
+     {{!-- <p class="input-field">
       <input type="text" name="username" placeholder="Username">
-    </p>
+    </p> --}}
     <p class="input-field">
       <input type="password" name="password" placeholder="Password">
     </p>
-     <p class="input-field">
+     {{!-- <p class="input-field">
       <input type="text" name="mantra" placeholder="Motto/Mantra">
-    </p>
+    </p> --}}
     <p class="input-field">
-      <input type="submit" value="Sign Up" class="btn-floating btn-large waves-effect waves-light blue">
+      <input type="submit" value="join" class=" btn-large color-gray">
     </p>
   </form>
 </section>
