--- a/views/intention/new.hbs
+++ b/views/intention/new.hbs
@@ -1,8 +1,8 @@
 <section class="form-container">
-  <h4>breathe</h4>
+  <h4 style = "color: gray">breathe</h4>
   <form action="/intention" method="post" class="intention-form">
     <div class="input-field">
-      <textarea name= "intention[content]" cols="30" rows="10"   
+      <textarea name= "intention[content]" cols="40" rows="20"   
       placeholder="take a deep breath... 
 set your intention."></textarea>
     </div>
@@ -15,7 +15,7 @@ set your intention."></textarea>
       </select>
     </div>
     <div class="input-field">
-      <input type="submit" value="+" class="btn">
+      <input type="submit" value="+" class="btn" style = "background-color: gray">
     </div>
   </form>
 </section>
