--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -4,20 +4,20 @@
 
 
 <section class="row">
-  <h4>Log In:</h4>
+  {{!-- <h4>log in:</h4> --}}
 
   <form action="" method="POST" class="auth-form">
     <p class="input-field">
       <input type="email" name="email" placeholder="Email">
     </p>
-    <p class="input-field">
+    {{!-- <p class="input-field">
       <input type="text" name="username" placeholder="Username">
-    </p>
+    </p> --}}
     <p class="input-field">
       <input type="password" name="password" placeholder="Password">
     </p>
     <p class="input-field">
-      <input type="submit" value="Log In" class="btn-floating btn-large waves-effect waves-light blue">
+      <input type="submit" value="Log In" class="btn-floating btn-large waves-effect waves-dark gray">
     </p>
   </form>
 </section>
