install easytimer.js

--- a/views/reflection/show.hbs
+++ b/views/reflection/show.hbs
@@ -1,6 +1,8 @@
-{{!-- <div class="card">
+<h1> Timer </h1>
+<div class="card">
+
   <div class="card-content">
     <a class="card-title" href="/intention/{{id}}">
       {{ content }}
     </a>
-  </div> --}}
+  </div>
