--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -1,15 +1,15 @@
 <section class="profile">
   <form> 
-   <p class="input-field">
+   {{!-- <p class="input-field">
       <input type="text" name="username" placeholder="Username">
     </p>
       <p class="input-field">
-      <input type="submit" value="submit" class="btn-floating btn-large waves-effect waves-light blue">
+      <input type="submit" value="submit" class="btn-floating btn-large waves-effect waves-light blue"> --}}
     </form>
 </section>
-  <p> e-mail address: {{user.email}}</p>
+  {{!-- <p> e-mail address: {{user.email}}</p>
   <p> username: {{author.username}}</p>
-  <p> motto/mantra: </p>
+  <p> motto/mantra: </p> --}}
 
   {{!-- <h2> e-mail address: {{user.email}}</h2> --}}
   {{#if user.intentions}}
