add to profile view

--- a/views/intention/show.hbs
+++ b/views/intention/show.hbs
@@ -14,7 +14,7 @@
         <a href="/user/{{ author.id }}" class="">{{ author.email }}</a>
         <span class="intention__date">{{ createdAt }}</span>
         <span class="intention_answers">{{ answers.length }} Answers</span>
-        {{!-- <span class = "intention_likes"> {{likes.length }} Likes</span> --}}
+        <span class = "intention_likes"> {{likes.length }} Likes</span>
       </div>
     </div>
   {{/each}}
