--- a/views/reflection/show.hbs
+++ b/views/reflection/show.hbs
@@ -1,8 +1,13 @@
-<h1> Timer </h1>
-<div class="card">
+<h1> meditation timer </h1>
 
-  <div class="card-content">
-    <a class="card-title" href="/intention/{{id}}">
-      {{ content }}
-    </a>
-  </div>
+<div id="chronoExample">
+    <div class="values">00:00:00</div>
+    <div>
+        <button class="startButton">Start</button>
+        <button class="pauseButton" >Pause</button>
+        <button class="stopButton">Stop</button>
+        <button class="resetButton">Reset</button>
+    </div>
+</div>
+
+{{!-- https://git.generalassemb.ly/mdfortino/js-countdown-timer --}}
