--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -1,19 +1,35 @@
-<section class="profile">
-  <form> 
-   {{!-- <p class="input-field">
-      <input type="text" name="username" placeholder="Username">
-    </p>
-      <p class="input-field">
-      <input type="submit" value="submit" class="btn-floating btn-large waves-effect waves-light blue"> --}}
-    </form>
-</section>
-  {{!-- <p> e-mail address: {{user.email}}</p>
-  <p> username: {{author.username}}</p>
-  <p> motto/mantra: </p> --}}
 
-  {{!-- <h2> e-mail address: {{user.email}}</h2> --}}
+{{!-- <!DOCTYPE html>
+<html>
+  <head lang="en">
+  <meta charset="UTF-8"> --}}
+  <script language="JavaScript">
+    function showInput() {
+        document.getElementById('display').innerHTML = 
+                    document.getElementById("user_input").value;
+    }
+  </script>
+  </head>
+  <h1> profile </h1>
+  <p> username/e-mail address : {{user.email}}</p>
+<body>
+
+  <form>
+    <label><b>What is your personal mantra?</b></label>
+    <input type="text" name="message" id="user_input">
+  </form>
+
+  <input type="submit" onclick="showInput();"><br/>
+  <label> 
+    <h1>my mantra</h1>
+  </label>
+  <p><span id='display'></span></p>
+</body>
+{{!-- </html> --}}
+
   {{#if user.intentions}}
-    <div class="intentions">
+    <div class="intentions"> 
+      <h1> my daily intentions </h1> 
       {{#each user.intentions}}
          {{> 'intention'}}
       {{/each}}
@@ -30,6 +46,3 @@
   {{else}}
     <p></p>
   {{/if}}
-</section>
-
-
