add to reflection route, model, controller

--- a/views/user/show.hbs
+++ b/views/user/show.hbs
@@ -35,7 +35,7 @@
       {{/each}}
     </div>
   {{else}}
-    <p>No posts yet</p>
+    <p>no intentions posted yet</p>
   {{/if}}
 {{#if author.username}}
     <div class="username">
