--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <script src = "/script.js"> </script>
+
      {{!-- <link rel="stylesheet" type="text/css" media="screen" href="/styles.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> --}}
 
@@ -40,5 +42,6 @@
     <main class="container">
       {{{ body }}}
     </main>
+   <script src="../public/js/script.js"></script>
   </body>
 </html>
