--- a/views/reflection/show.hbs
+++ b/views/reflection/show.hbs
@@ -1,13 +1,14 @@
-<h1> meditation timer </h1>
 
-<div id="chronoExample">
-    <div class="values">00:00:00</div>
-    <div>
-        <button class="startButton">Start</button>
-        <button class="pauseButton" >Pause</button>
-        <button class="stopButton">Stop</button>
-        <button class="resetButton">Reset</button>
+
+<h1> meditation timer </h1>
+<a href="https://insighttimer.com/" >"https://insighttimer.com/"</a>
+   <div class='contain-timer'>
+        <h1 id=timer><time>00:00:00</time></h1>
+        <button id="start">start</button>
+        <button id="stop">stop</button>
+        <button id="clear">clear</button>
     </div>
-</div>
+
+ {{!-- <script src="/script.js"></script> --}}
 
 {{!-- https://git.generalassemb.ly/mdfortino/js-countdown-timer --}}
