--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -20,6 +20,7 @@
     </p> --}}
     <p class="input-field">
       <input type="submit" value="join" class=" btn-large color-gray">
+      together, let's breathe. 
     </p>
   </form>
 </section>
