style reflection page, begin to debug delete function of intention posts

--- a/views/reflection/edit.hbs
+++ b/views/reflection/edit.hbs
@@ -1,6 +1,6 @@
-<h1> Reflection</h1>
+<h1> reflection</h1>
 
-<div class="new-item">
+<div class="new-post">
 
   <form action="{{this.id}}?_method=PUT" method="POST">
     <p class="input-field">
