--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -16,8 +16,9 @@
     <p class="input-field">
       <input type="password" name="password" placeholder="Password">
     </p>
-    <p class="input-field">
-      <input type="submit" value="Log In" class="btn-floating btn-large waves-effect waves-dark gray">
+  <p id = "login" class="input-field">
+      <input type="submit" value="login" class="btn" style = "background-color: gray">
     </p>
+    
   </form>
 </section>
