--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,7 +27,7 @@
           {{#if currentUser}}
           <div class="pagination">
             <li><a style = "color: white" href="/intention/new">+intention</a></li>
-            <li><a style = "color: white" href = "/reflection/show"> +reflection </a></li>
+            <li><a style = "color: white" href = "/reflection/show"> +meditation </a></li>
             <li><a style = "color: white" href="/user/{{currentUser.id}}">profile</a></li>
             <li><a style = "color: white" href="/user/logout">log out</a></li>
           {{else}}
