--- a/views/reflection/new.hbs
+++ b/views/reflection/new.hbs
@@ -3,7 +3,8 @@
   <form action="/reflection" method="post" class="reflection-form">
     <div class="input-field">
       <textarea name= "reflection[content]" cols="40" rows="20"   
-      placeholder="take time to pause and reflect."></textarea>
+      placeholder="This feature is currently disabled but will be running soon. 
+For now, take time to pause and practice patience in this moment. If possible, get outside and reflect in nature instead."></textarea>
     </div>
     <div class="">
       <select name="author" id="author">
