--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -18,8 +18,9 @@
      {{!-- <p class="input-field">
       <input type="text" name="mantra" placeholder="Motto/Mantra">
     </p> --}}
-    <p class="input-field">
-      <input type="submit" value="join" class=" btn-large color-gray">
+    <p id = "join" class="input-field">
+      <input type="submit" value="join" class="btn" style = "background-color: gray">
+    </div>
       together, let's breathe. 
     </p>
   </form>
