--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,8 +6,8 @@
     <title>BREATHER</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-    <script src = "/script.js"> </script>
+    {{!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"> --}}
+
   </head>
   <body>
     <header class="site-header">
@@ -34,6 +34,5 @@
     <main class="container">
       {{{ body }}}
     </main>
-   <script src="../public/js/script.js"></script>
   </body>
 </html>
