--- a/views/partials/reflection.hbs
+++ b/views/partials/reflection.hbs
@@ -1,4 +1,4 @@
-{{!-- <div class="card">
+<div class="card">
   <div class="card-content">
     <a class="card-title" href="/reflection/{{id}}">
       {{ content }}
@@ -12,4 +12,4 @@
     </form>
   </div>
 </div>
- --}}
+
