--- a/views/reflection/index.hbs
+++ b/views/reflection/index.hbs
@@ -1,4 +1,4 @@
-<h1> reflection</h1>
+{{!-- <h1> reflection</h1>
 
 <div class="new-post">
 
@@ -17,4 +17,4 @@
     <input type="submit" value="Back" class="button"/>
   </form>
 
-</div>
+</div> --}}
