--- a/views/reflection/new.hbs
+++ b/views/reflection/new.hbs
@@ -3,8 +3,8 @@
   <form action="/reflection" method="post" class="reflection-form">
     <div class="input-field">
       <textarea name= "reflection[content]" cols="40" rows="20"   
-      placeholder="This feature is currently disabled but will be running soon. 
-For now, take time to pause and practice patience in this moment. If possible, get outside and reflect in nature instead."></textarea>
+      placeholder="take a deep breath...
+      add a reflection or meditation."></textarea>
     </div>
     
     <div class="">
