--- a/views/reflection/show.hbs
+++ b/views/reflection/show.hbs
@@ -1,3 +1,11 @@
+<li> <a href= "https://insighttimer.com/"> Insight Timer</a>  </li>
+<li> <a href = "https://www.meditationoasis.com/how-to-meditate-1/"> Meditation Oasis</a> </li>
+<li> <a href = "https://www.tarabrach.com/guided-meditations/"> Tara Brach Guided Meditations and Podcast</a> </li>
+<li> <a href = "https://zenhabits.net/more/"> Zen Habits</a> </li>
+<li> <a href = "https://www.doyogawithme.com/yoga-meditation"> Do Yoga With Me</a> </li>
+<li><a href = "https://www.mindful.org/audio-resources-for-mindfulness-meditation">Mindful Meditations </a>  </li>
+<li> <a href = "https://chopra.com/articles/guided-meditations"> Chopra Center Meditations</a> </li>
+
 {{#if reflections}}
     <div class="reflections"> 
       {{#each reflections}}
